fix android side so it builds and runs properly

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,6 +49,7 @@ repositories {
         url "$projectDir/../node_modules/react-native/android"
     }
     mavenCentral()
+    google()
 }
 
 dependencies {
