--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-native-mqtt",
   "title": "React Native Native Mqtt",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "An MQTT client or React Native that actually works with a simple Javascript interface",
   "main": "./lib/index.js",
   "types": "./types/index.d.ts",
@@ -22,7 +22,10 @@
     "mqtt",
     "typescript"
   ],
-  "author": "David Corona",
+  "author": {
+    "name": "David Corona",
+    "username": "davesters"
+  },
   "license": "MIT",
   "licenseFilename": "LICENSE.md",
   "readmeFilename": "README.md",
@@ -32,7 +35,6 @@
     "tiny-emitter": "^2.1.0"
   },
   "peerDependencies": {
-    "react": "^16.8.1",
     "react-native": ">=0.59.0-rc.0 <1.0.x"
   },
   "devDependencies": {
@@ -41,6 +43,7 @@
     "rimraf": "^2.6.3",
     "standard-version": "^6.0.1",
     "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.5"
   }
 }
