--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "clean": "rimraf lib",
     "tsc": "tsc -p .",
     "build": "npm run clean && npm run tsc --",
-    "release": "standard-version"
+    "release": "standard-version",
+    "install": "npm run build"
   },
   "keywords": [
     "react-native",
