--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-native-mqtt",
   "title": "React Native Native Mqtt",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "An MQTT client or React Native that actually works with a simple Javascript interface",
   "main": "./lib/index.js",
   "types": "./types/index.d.ts",
@@ -32,19 +32,12 @@
   "dependencies": {
     "buffer": "^5.4.0",
     "random-id": "^1.0.3",
-    "tiny-emitter": "^2.1.0",
-    "@types/react-native": "^0.60.7",
-    "react-native": "^0.60.5",
-    "rimraf": "^3.0.0",
-    "standard-version": "^7.0.0",
-    "tslint": "^5.19.0",
-    "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.5.3"
+    "tiny-emitter": "^2.1.0"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@types/react-native": "^0.60.7",
-    "react-native": "^0.60.5",
+    "@types/react-native": "^0.64.0",
+    "react-native": "^0.64.0",
     "rimraf": "^3.0.0",
     "standard-version": "^7.0.0",
     "tslint": "^5.19.0",
